PythonProjects/ph_fenics/Mindlin_PHs_fenics/mindlin4scrimp/jitfailure-dolfin_expression_6000e27b90661b9490f7b953fa148ab9/error.log
/tmp/tmp8zk7mx65/dolfin_expression_6000e27b90661b9490f7b953fa148ab9.cpp: In member function 'virtual void dolfin::dolfin_expression_6000e27b90661b9490f7b953fa148ab9::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmp8zk7mx65/dolfin_expression_6000e27b90661b9490f7b953fa148ab9.cpp:71:34: error: expected ')' before ';' token
           values[0] = pow(x[0], 2;
                                  ^
/tmp/tmp8zk7mx65/dolfin_expression_6000e27b90661b9490f7b953fa148ab9.cpp: In member function 'virtual double dolfin::dolfin_expression_6000e27b90661b9490f7b953fa148ab9::get_property(std::__cxx11::string) const':
/tmp/tmp8zk7mx65/dolfin_expression_6000e27b90661b9490f7b953fa148ab9.cpp:83:11: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
           if (name == "x0") return x0;          if (name == "xL") return xL;          if (name == "y0") return y0;          if (name == "yL") return yL;          if (name == "ampl") return ampl;          if (name == "sX") return sX;          if (name == "sY") return sY;          if (name == "X0") return X0;          if (name == "Y0") return Y0;          if (name == "rho") return rho;
           ^~
/tmp/tmp8zk7mx65/dolfin_expression_6000e27b90661b9490f7b953fa148ab9.cpp:83:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
           if (name == "x0") return x0;          if (name == "xL") return xL;          if (name == "y0") return y0;          if (name == "yL") return yL;          if (name == "ampl") return ampl;          if (name == "sX") return sX;          if (name == "sY") return sY;          if (name == "X0") return X0;          if (name == "Y0") return Y0;          if (name == "rho") return rho;
                                                 ^~
